--- a/src/com/ja/saillog/sql.properties
+++ b/src/com/ja/saillog/sql.properties
@@ -8,9 +8,9 @@ create_trip = CREATE TABLE trip (             \
    trip_name VARCHAR(180) NOT NULL            \
 )
 
+drop_pos = DROP TABLE IF EXISTS position
 
-pos = BROP TABLE IF EXISTS position;                             \
-CREATE TABLE position (                                    \
+create_pos = CREATE TABLE position (                       \
    position_id INTEGER PRIMARY KEY AUTOINCREMENT,          \
    trip_id INTEGER NOT NULL,                               \
    pos_time TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,  \
@@ -18,7 +18,7 @@ CREATE TABLE position (                                    \
    longitude DOUBLE NOT NULL,                              \
    speed DOUBLE NOT NULL,                                  \
    bearing DOUBLE NOT NULL                                 \
-);
+)
 
 temp_trip_entry = INSERT INTO trip VALUES (1, 'Test trip')
 
