Added the database interface for inserting engine use and sailplan events.

--- a/src/com/ja/saillog/sql.properties
+++ b/src/com/ja/saillog/sql.properties
@@ -20,5 +20,17 @@ create_pos = CREATE TABLE position (                       \
    bearing DOUBLE NOT NULL                                 \
 )
 
+drop_event = DROP TABLE IF EXISTS event
+
+create_event = CREATE TABLE event (                         \
+   event_id INTEGER PRIMARY KEY AUTOINCREMENT,              \
+   trip_id INTEGER NOT NULL,                                \
+   position_id INTEGER NOT NULL,                  \
+   event_time TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
+   engine INTEGER NOT NULL DEFAULT 0,                       \
+   sailplan INTEGER NOT NULL DEFAULT 0                      \
+)
+   
+
 temp_trip_entry = INSERT INTO trip VALUES (1, 'Test trip')
 
