--- a/src/com/ja/saillog/sql.properties
+++ b/src/com/ja/saillog/sql.properties
@@ -8,11 +8,18 @@ create_trip = CREATE TABLE trip (             \
    trip_name VARCHAR(180) NOT NULL            \
 )
 
+drop_leg = DROP TABLE IF EXISTS trip_leg
+
+create_leg = CREATE TABLE trip_leg            \
+   leg_id INTEGER PRIMARY KEY AUTOINCREMENT,  \
+   leg_name VARCHAR(180) NOT NULL,            \
+   trip_id INTEGER                            \
+)
+
 drop_pos = DROP TABLE IF EXISTS position
 
 create_pos = CREATE TABLE position (                       \
    position_id INTEGER PRIMARY KEY AUTOINCREMENT,          \
-   trip_id INTEGER NOT NULL,                               \
    pos_time TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,  \
    latitude DOUBLE NOT NULL,                               \
    longitude DOUBLE NOT NULL,                              \
@@ -24,8 +31,7 @@ drop_event = DROP TABLE IF EXISTS event
 
 create_event = CREATE TABLE event (                         \
    event_id INTEGER PRIMARY KEY AUTOINCREMENT,              \
-   trip_id INTEGER NOT NULL,                                \
-   position_id INTEGER NOT NULL,                  \
+   position_id INTEGER NOT NULL,                            \
    event_time TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
    engine INTEGER NOT NULL DEFAULT 0,                       \
    sailplan INTEGER NOT NULL DEFAULT 0                      \
