Continued refactoring. Direct dependencies to the TrackDB instance have been removed from the UI action class (apart from the temporary export calls).

--- a/src/com/ja/saillog/sql.properties
+++ b/src/com/ja/saillog/sql.properties
@@ -10,7 +10,7 @@ create_trip = CREATE TABLE trip (             \
 
 drop_leg = DROP TABLE IF EXISTS trip_leg
 
-create_leg = CREATE TABLE trip_leg            \
+create_leg = CREATE TABLE trip_leg (          \
    leg_id INTEGER PRIMARY KEY AUTOINCREMENT,  \
    leg_name VARCHAR(180) NOT NULL,            \
    trip_id INTEGER                            \
