Updated to a newer ADT, which caused some changes in project files.

--- a/test/.project
+++ b/test/.project
@@ -3,7 +3,7 @@
 	<name>SailLogTest</name>
 	<comment></comment>
 	<projects>
-		<project>SailLog</project>
+		<project>SailLogActivity</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
