Added db file name into the trip db.

--- a/src/com/ja/saillog/sql.properties
+++ b/src/com/ja/saillog/sql.properties
@@ -5,15 +5,8 @@ drop_trip = DROP TABLE IF EXISTS trip
 
 create_trip = CREATE TABLE trip (             \
    trip_id INTEGER PRIMARY KEY AUTOINCREMENT, \
-   trip_name VARCHAR(180) NOT NULL            \
-)
-
-drop_leg = DROP TABLE IF EXISTS trip_leg
-
-create_leg = CREATE TABLE trip_leg (          \
-   leg_id INTEGER PRIMARY KEY AUTOINCREMENT,  \
-   leg_name VARCHAR(180) NOT NULL,            \
-   trip_id INTEGER                            \
+   trip_name VARCHAR(180) NOT NULL,           \
+   trip_db_filename VARCHAR(180) NOT NULL     \
 )
 
 drop_pos = DROP TABLE IF EXISTS position
