Implemented the selecting of trips.
Events for different trips get inserted into separate
databases. This commit provides only the insert functionality.

TBD:
 - Deleting of databases.
 - Move the exporting into the trips view.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="TripSelectorActivity" 
+            android:excludeFromRecents="true" 
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.ja.saillog.tripSelector" />
+                <category android:name="android.intent.category.DEFAULT" />
+             </intent-filter>
+        </activity>
 
     </application>
 </manifest>
