--- a/src/com/ja/saillog/sql.properties
+++ b/src/com/ja/saillog/sql.properties
@@ -6,7 +6,10 @@ drop_trip = DROP TABLE IF EXISTS trip
 create_trip = CREATE TABLE trip (             \
    trip_id INTEGER PRIMARY KEY AUTOINCREMENT, \
    trip_name VARCHAR(180) NOT NULL,           \
-   trip_db_filename VARCHAR(180) NOT NULL     \
+   trip_db_filename VARCHAR(180) NOT NULL,    \
+   create_time TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
+   last_activated TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
+   selected INTEGER NOT NULL DEFAULT 0        \
 )
 
 drop_pos = DROP TABLE IF EXISTS position
