--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.ja.saillog"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+          package="com.ja.saillog"
+          android:versionCode="1"
+          android:versionName="1.0">
+  <uses-sdk android:minSdkVersion="8" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true" android:theme="@android:style/Theme.Light">
-        <activity android:name=".SailLogActivity"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name="TripSelectorActivity" 
-            android:excludeFromRecents="true" 
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.ja.saillog.tripSelector" />
-                <category android:name="android.intent.category.DEFAULT" />
-             </intent-filter>
-        </activity>
+  <application android:icon="@drawable/icon"
+               android:label="@string/app_name"
+               android:debuggable="true"
+               android:theme="@android:style/Theme.Light">
+    <activity android:name=".SailLogActivity"
+              android:label="@string/app_name">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+    <activity android:name="TripSelectorActivity"
+              android:excludeFromRecents="true"
+              android:exported="false">
+      <intent-filter>
+        <action android:name="com.ja.saillog.tripSelector" />
+        <category android:name="android.intent.category.DEFAULT" />
+      </intent-filter>
+    </activity>
+    <activity android:name="TripEditActivity"
+              android:excludeFromRecents="true"
+              android:exported="false">
+      <intent-filter>
+        <action android:name="com.ja.saillog.tripEdit" />
+        <category android:name="android.intent.category.DEFAULT" />
+      </intent-filter>
+    </activity>
 
-    </application>
+  </application>
 </manifest>
