tripdb: Added start and end location handling to ui.
The insert/fetch ops to DB do not work yet.

--- a/src/com/ja/saillog/sql.properties
+++ b/src/com/ja/saillog/sql.properties
@@ -6,6 +6,8 @@ drop_trip = DROP TABLE IF EXISTS trip
 create_trip = CREATE TABLE trip (             \
    trip_id INTEGER PRIMARY KEY AUTOINCREMENT, \
    trip_name VARCHAR(180) NOT NULL,           \
+   trip_start_place VARCHAR(180) NOT NULL DEFAULT '', \
+   trip_end_place VARCHAR(180) NOT NULL DEFAULT '', \
    trip_db_filename VARCHAR(180) NOT NULL,    \
    create_time TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
    last_activated TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, \
