TrackDB: Total distance gets updated to the database.

--- a/src/com/ja/saillog/sql.properties
+++ b/src/com/ja/saillog/sql.properties
@@ -22,8 +22,21 @@ create_pos = CREATE TABLE position (                       \
    latitude DOUBLE NOT NULL,                               \
    longitude DOUBLE NOT NULL,                              \
    speed DOUBLE NOT NULL,                                  \
-   bearing DOUBLE NOT NULL                                 \
+   bearing DOUBLE NOT NULL,                                \
+   accuracy DOUBLE                                         \
 )
+
+drop_trip_stats = DROP TABLE IF EXISTS trip_stats
+
+create_trip_stats = CREATE TABLE trip_stats (              \
+   distance DOUBLE NOT NULL DEFAULT 0.0,                   \
+   engine_time DOUBLE NOT NULL DEFAULT 0.0,                \
+   sailing_time DOUBLE NOT NULL DEFAULT 0.0,               \
+   estimated_avg_speed DOUBLE NOT NULL DEFAULT 0.0         \
+)
+
+insert_trip_stats_entry = INSERT INTO trip_stats           \
+   (distance) VALUES (0.0);
 
 drop_event = DROP TABLE IF EXISTS event
 
