track: Add last_entry and first_entry to the stats.

--- a/src/com/ja/saillog/database/sql.properties
+++ b/src/com/ja/saillog/database/sql.properties
@@ -28,15 +28,24 @@ create_pos = CREATE TABLE position (                       \
 
 drop_trip_stats = DROP TABLE IF EXISTS trip_stats
 
+// v2
 create_trip_stats = CREATE TABLE trip_stats (              \
    distance DOUBLE NOT NULL DEFAULT 0.0,                   \
    engine_time DOUBLE NOT NULL DEFAULT 0.0,                \
    sailing_time DOUBLE NOT NULL DEFAULT 0.0,               \
-   estimated_avg_speed DOUBLE NOT NULL DEFAULT 0.0         \
+   estimated_avg_speed DOUBLE NOT NULL DEFAULT 0.0,        \
+   first_entry TIMESTAMP,                                  \
+   last_entry TIMESTAMP                                    \
 )
 
 insert_trip_stats_entry = INSERT INTO trip_stats           \
    (distance) VALUES (0.0);
+   
+update_trip_stats1 = ALTER TABLE trip_stats                \
+   ADD COLUMN first_entry TIMESTAMP
+
+update_trip_stats2 = ALTER TABLE trip_stats                \
+   ADD COLUMN last_entry TIMESTAMP
 
 drop_event = DROP TABLE IF EXISTS event
 
