--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,6 @@
 
   <application android:icon="@drawable/icon"
                android:label="@string/app_name"
-               android:debuggable="true"
                android:theme="@android:style/Theme.Light">
     <activity android:name="com.ja.saillog.ui.SailLogActivity"
               android:label="@string/app_name">
@@ -34,6 +33,12 @@
         <category android:name="android.intent.category.DEFAULT" />
       </intent-filter>
     </activity>
-
+    <service android:name="com.ja.saillog.serv.TrackSavingService" 
+             android:exported="false" >
+      <intent-filter>
+        <action android:name="com.ja.saillog.serv.trackSavingService" />
+        <category android:name="android.intent.category.DEFAULT" />
+      </intent-filter>      
+    </service>
   </application>
 </manifest>
